# llmedico

./: .gitignore  README.md  requirements.txt
.llm_caller/: README.md  pyproject.toml
.llm_caller/src/llm_caller/: prompts.py
.llm_caller/src/llm_caller/models/: model.py  ollama.py
.llm_caller/src/llm_caller/utils/: processing.py
.llm_caller/tests/: test_model_and_prompt.py  test_ollama.py
.se_helpers/: pyproject.toml
.se_helpers/src/se_helpers/: docker_helper.py
llmedico/: CITATION.cff  LICENSE  Makefile  README.md  README_new.md  README_old.md  config.toml  pyproject.toml  specs_isnotempty.json
llmedico/data/jars/: sources.txt
llmedico/examples/: generate_evaluate.py  generate_examples.py  generate_translate.py
llmedico/examples/evaluate/: llmedico-evaluation-org.apache.commons.collections4.ArrayStack.csv  llmedico-evaluation-org.apache.commons.collections4.BagUtils.csv
llmedico/examples/translate/org.apache.commons.collections4.ArrayStack/: llmedico-condition_translator.json  llmedico-conditions.json  test_llmedico_conditions_jdoc_format.json
llmedico/examples/translate/org.apache.commons.collections4.BagUtils/: llmedico-condition_translator.json  llmedico-conditions.json  test_llmedico_conditions_jdoc_format.json
llmedico/scripts/: run_count_dataset.py  run_evaluation.py  run_evaluation_new.py  run_translation.py
llmedico/scripts/results-evalutation/: llmedico-evaluation-metrics-MetricMode.LLMEDICO-all_projects-project.csv  llmedico-evaluation-metrics-MetricMode.RELAXED-all_projects-project_gs-core-alt.csv  raw_data.txt
llmedico/scripts/results-evalutation-jdoctor/: llmedico-evaluation-metrics-MetricMode.JDOCTOR-all_projects-project.csv  llmedico-evaluation-metrics-MetricMode.LLMEDICO-all_projects-project.csv  llmedico-evaluation-metrics-MetricMode.RELAXED-all_projects-project.csv
llmedico/scripts/results-evalutation-jdoctor/2026-01-15/: llmedico-evaluation-relevant_assertion_relations-all_projects.csv
llmedico/scripts/results-evalutation-jdoctor/2026-01-19/: llmedico-evaluation-metrics-MetricMode.LLMEDICO-all_projects-project.csv  (+1 more)
llmedico/src/llmedico/: cli.py  main.py
llmedico/storage/: jgrapht-core-0.9.2.txt  org.jgrapht.alg.AbstractPathElementList_method_goal.json  sources_ground_truth_projects.txt  specs_isnotempty.json  specs_isnotempty_minimal.json  specs_minimal.json
llmedico/storage/projects_txt/: commons-collections4-4.1.txt  commons-math3-3.6.1.txt  freecol-0.11.6.txt  guava-19.0.txt  plume-lib-1.1.0.txt  plume-lib-1.1.0_jdoc.txt
llmedico/storage/prompt_comparission/: result_CompleteGraphGenerator_old.csv  result_Graph_old.csv  result_Graphs_old.csv
llmedico/tests/: test_condition_translator.py  test_condition_validator.py  test_get_methods.py  test_javapy.py  test_translator.py  test_with_llm.py
llmedico/tests/test_builder/: test_builder_jdoctor.py  test_builder_llmedico.py
llmedico/tests/test_cli/: test_cli.py
llmedico/tests/test_config/: .env  config.toml  test_config.py  test_config_llm.py
llmedico/tests/test_evaluation/: test_evalution.py
llmedico/tests/test_evaluation_metrics/: test_eval_metrics.py
llmedico/tests/test_evaluation_z3/: test_ast_normaliser.py  test_evaluator.py  test_evaluator_z3.py  test_preprocessing.py  test_string_parser.py  test_translator.py  test_z3.py  test_z3_translator.py
llmedico/tests/test_models/: test_builder.py  test_builder_real_values.py  test_jdoctor_adapter.py
llmedico/tests/test_pyjava/: test_classpath.py  test_is_valid_assertion.py  test_java_extractor.py  test_java_parser.py  test_pyjava.py
llmedico/tests/test_translator/: test_get_methods.py  test_repair_loop.py  test_translator.py
pyjdoctor/: README.md  pyproject.toml
pyjdoctor/scripts/: GsonInstance.java  dockerfile-jdoctor  results_table.py  setup.sh
pyjdoctor/src/pyjdoctor/: extractor2.py  jdoctor_metrics.py  main.py  pyjdoctor.py
pyjdoctor/storage/: stats_template.csv
pyjdoctor/tests/: main.py  test_pyjdoctor.py
(+5103 files in other folders)
