[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "se_helpers"
version = "0.1.0"
dependencies = [
    "docker"
]
[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

