[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "llmedico"
version = "0.1.0"
dependencies = [
    "jpype1"
]
[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
