[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
llmedico = ["jars/*.jar"]

[project]
name = "llmedico"
version = "0.1.0"
dependencies = [
#    "llm_caller @ file:../llm_caller",
#    "PyJdoctor @ file:../pyjdoctor",
#    "se_helpers @ file:../se_helpers",
    "jpype1",
    "click",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anthropic==0.72.0",
    "anyio==4.11.0",
    "async-timeout==5.0.1",
    "attrs==25.4.0",
    "boto==2.49.0",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "distro==1.9.0",
    "docker==7.1.0",
    "docstring_parser==0.17.0",
    "exceptiongroup==1.3.0",
    "fastuuid==0.14.0",
    "filelock==3.20.1",
    "frozenlist==1.8.0",
    "fsspec==2025.12.0",
    "grpcio==1.67.1",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface_hub==1.2.3",
    "idna==3.11",
    "importlib_metadata==8.7.1",
    "iniconfig==2.3.0",
    "Jinja2==3.1.6",
    "jiter==0.12.0",
    "jpype1==1.6.0",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "litellm==1.80.11",
    "MarkupSafe==3.0.3",
    "multidict==6.7.0",
    "ollama==0.6.0",
    "openai==2.14.0",
    "packaging==25.0",
    "pluggy==1.6.0",
    "propcache==0.4.1",
    "pydantic==2.12.4",
    "pydantic_core==2.41.5",
    "Pygments==2.19.2",
    "pytest==9.0.0",
    "python-dotenv==1.2.1",
    "PyYAML==6.0.3",
    "referencing==0.37.0",
    "regex==2025.11.3",
    "requests==2.32.5",
    "rpds-py==0.30.0",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "tiktoken==0.12.0",
    "tokenizers==0.22.1",
    "tomli==2.3.0",
    "tqdm==4.67.1",
    "typer-slim==0.21.0",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "urllib3==2.5.0",
    "yarl==1.22.0",
    "z3-solver==4.15.4.0",
    "zipp==3.23.0"
]

[project.scripts]
llmedico = "llmedico.cli:main"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
